<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColorWhite"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    tools:context=".ui.home.fragment.AirQualityListFragment">

    <LinearLayout
        android:layout_marginTop="@dimen/dimen_5dp"
        android:layout_marginHorizontal="@dimen/dimen_10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/StyleNormalTextView.XXNormalBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_coding_assignment_android"
            />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/StyleNormalTextView.XNormalBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_air_quality_monitoring"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_2dp"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:background="@color/bgProximityTheme"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNoInternet"
        style="@style/StyleNormalTextView.XNormalBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/dimen_20dp"
        android:gravity="center"
        android:text="@string/msg_no_internet_home_screen"
        android:visibility="gone"
        tools:text="No internet connection available. Please turn on your internet &amp; try again." />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAQIList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dimen_10dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:reverseLayout="false"
        tools:itemCount="5"
        tools:listitem="@layout/item_air_quality_list" />

</LinearLayout>